# stats-science

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish_docs_on_github_pages.yml  push_workflow.yml
src/stats_science/: __init__.py  constants.py  models.py  plot.py  r_modules.py  utils.py
tests/: conftest.py  test_models.py  test_plot.py
tests/data/: crop_data_with_outlier.csv  sleepstudy.csv
